# Platformer

./: .gitignore  CMakeLists.txt  ReadMe.txt  imgui.ini
PhysicsLib/: CMakeLists.txt
PhysicsLib/CMake/: CMakeLists_physicsLib.cmake
PhysicsLib/_scripts/: generate_cmake_physics.sh
PhysicsLib/source/: PhysicsWorld.cpp  PhysicsWorld.h  Quaternion.h  RigidBody.cpp  RigidBody.h  Vec3.h
Shader/: DebugBullet.frag  DebugBullet.vert  ShaderFrag.frag  ShaderVertex.vert
app/: CMakeLists.txt  DebugDrawer.cpp  DebugDrawer.h
app/CMake/: CMakeLists_app.cmake
app/_scripts/: generate_cmake_app.sh
app/source/: App.cpp  App.h  DebugDrawer.cpp  DebugDrawer.h  Enemy.cpp  Enemy.h  FSM.cpp  FSM.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  MTL_ModernOpenGL.cpp  Player.cpp  Player.h  Save.cpp  Save.h  State.h  StateEdit.cpp  StateEdit.h  StateMenu.cpp  StateMenu.h  StateOption.cpp  StateOption.h  StatePause.cpp  StatePause.h  StatePlay.cpp  StatePlay.h
libgfx/: CMakeLists.txt
libgfx/CMake/: CMakeLists_lib.cmake
libgfx/_scripts/: generate_cmake_lib.sh
libgfx/source/: ResourceGFX.cpp  ResourceGFX.h
libgfx/source/DataStructure/: Graph.cpp  Graph.h
libgfx/source/Debug/: Assertion.h  Log.cpp  Log.h
libgfx/source/LowRenderer/: Camera.cpp  Camera.h  Light.cpp  Light.h  Model.cpp  Model.h
libgfx/source/Maths/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
libgfx/source/Physics/: Transform.cpp  Transform.h
libgfx/source/Resources/: CubeRobot.cpp  CubeRobot.h  LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  ObjScene.h  ResourcesManager.cpp  ResourcesManager.h  Scene.cpp  Scene.h  Settings.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
